[package]
name = "cargo-cpp"
version = "0.1.0"
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
human-panic = "1.0.3"
anyhow = "1.0.40"
indicatif = "0.15.0"
