[package]
name = "cargo-dentaku-ant"
version = "0.1.2"
authors = ["DenTaku <dentaku1412@gmail.com>"]
description = "Package manageer for C++ with Bazel and Clang-format."
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
human-panic = "1.0.3"
anyhow = "1.0.40"
indicatif = "0.15.0"
